--- a/app/src/main/res/layout/car_state.xml
+++ b/app/src/main/res/layout/car_state.xml
@@ -36,7 +36,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/car_speed_unit"
+        android:text="@string/speed_unit"
         android:textSize="24dp"/>
 
     <TextView
