--- a/app/src/main/res/layout/device_list.xml
+++ b/app/src/main/res/layout/device_list.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent" >
 
         <ListView
-            android:id="@android:id/list"
+            android:id="@+id/list_device"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
         </ListView>
