--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -19,7 +19,8 @@
                 android:text="@string/obd_device"
                 android:layout_weight="1"/>
 
-            <TextView android:layout_width="wrap_content"
+            <TextView android:id="@+id/txt_connection_state"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/disconnected"
                 android:layout_weight="1"
@@ -32,12 +33,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/device_operation"
+                android:text="@string/device_on"
                 android:layout_weight="1"/>
 
-            <Switch android:layout_width="wrap_content"
+            <Switch android:id="@+id/sw_device_on"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/device_off"
+                android:layout_weight="1"/>
+
+            <Switch android:id="@+id/sw_device_off"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
 
@@ -53,27 +73,27 @@
                 android:text="@string/auto_control"
                 android:layout_weight="1"/>
 
-            <Switch android:layout_width="wrap_content"
+            <Switch android:id="@+id/sw_auto_control"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"/>
 
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:baselineAligned="false">
 
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/rotating_speed_control"
-                android:layout_weight="1"/>
-
-            <EditText
+            <CheckBox android:id="@+id/cb_rotating_speed_control"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@{obd.rotatingSpeed}"
-                android:layout_weight="1"/>
+                android:text="@string/rotating_speed_control"/>
+
+            <EditText android:id="@+id/et_rotating_speed"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:hint="@{obd.rotatingSpeed}"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -85,27 +105,21 @@
                 android:layout_height="wrap_content"
                 android:text="@string/auto_open"/>
 
-            <Switch android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/car_speed_control"
-                android:layout_weight="1"/>
-
-            <EditText
+            <CheckBox android:id="@+id/cb_car_speed_control"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@{obd.carSpeed}"
-                android:layout_weight="1"/>
+                android:text="@string/car_speed_control"/>
+
+            <EditText android:id="@+id/et_car_speed"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:hint="@{obd.carSpeed}"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -117,27 +131,21 @@
                 android:layout_height="wrap_content"
                 android:text="@string/auto_open"/>
 
-            <Switch android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/throttling_valve_control"
-                android:layout_weight="1"/>
-
-            <EditText
+            <CheckBox android:id="@+id/cb_throttling_valve_control"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@{obd.throttlingValue}"
-                android:layout_weight="1"/>
+                android:text="@string/throttling_valve_control"/>
+
+            <EditText android:id="@+id/et_throttling_valve"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:hint="@{obd.throttlingValue}"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -148,10 +156,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/auto_open"/>
-
-            <Switch android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
 
         </LinearLayout>
 
