--- a/app/src/main/res/layout/start.xml
+++ b/app/src/main/res/layout/start.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/c2">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/item01"/>
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="130dp"
+        android:src="@drawable/logo"/>
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="150dp"
+        android:src="@drawable/name"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#ccc"
+        android:textSize="15dp"
+        android:layout_marginTop="220dp"
+        android:text="@string/slogan"
+        android:layout_gravity="center_horizontal" />
 
 </LinearLayout>
