--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="c1">#ffd40c</color>
+    <color name="c2">#323437</color>
+    <color name="c3">#3a3e42</color>
+    <color name="c4">#40454a</color>
 </resources>
