--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,11 +7,13 @@
     <TextView android:id="@+id/txt_device_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24dp"/>
+        android:textSize="24dp"
+        android:textColor="#7f7f7f"/>
 
     <TextView android:id="@+id/txt_device_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="12dp"/>
+        android:textSize="12dp"
+        android:textColor="#7f7f7f"/>
 
 </LinearLayout>
