--- a/app/src/main/res/layout/rotating_speed_fragment.xml
+++ b/app/src/main/res/layout/rotating_speed_fragment.xml
@@ -1,26 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/bg_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/rotating_speed_unit"
+        android:textSize="20dp"
+        android:gravity="center_horizontal"
+        android:textColor="#7f7f7f"
+        android:layout_marginTop="280dp"/>
+
+    <TextView android:id="@+id/txt_rotating_speed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="40dp"
+        android:gravity="center_horizontal"
+        android:textColor="#ffd40c"
+        android:layout_marginTop="320dp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/rotating_speed"
         android:textSize="24dp"
-        android:textColor="#7f7f7f"/>
+        android:gravity="center_horizontal"
+        android:textColor="#7f7f7f"
+        android:layout_marginTop="380dp"/>
 
-    <TextView android:id="@+id/txt_rotating_speed"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="24dp"
-        android:textColor="#ffd40c"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/rotating_speed_unit"
-        android:textSize="24dp"
-        android:textColor="#7f7f7f"/>
-
-</LinearLayout>
+</RelativeLayout>
